new image added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="assets/images/602/secondPlan.svg" alt="plan topview" />
           </div>
           <div class="floorplan_details">
-            <img src="assets/images/602/addons.svg" alt="plan details" />
+            <img src="assets/images/602/details.png" alt="plan details" />
             <img src="assets/images/602/specs.svg" alt="plan specifications" />
           </div>
         </div>
