--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./assets/css/index.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script src="/assets/js/keypress_nav.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap"
       rel="stylesheet"
@@ -13,32 +19,64 @@
     <title>AARON PERO | The Spire Apartments</title>
   </head>
   <body>
-    <div class="layout">
-      <header>
-        <img
-          src="assets/images/602/TheSpireHorzLogo.svg"
-          alt="The Spire Apartments Logo"
-        />
-        <img src="assets/images/602/AaronPeroLogo.svg" alt="Aaron Pero logo" />
-      </header>
-      <main>
+    <div id="home" class="container">
+      <div class="layout">
+        <header>
+          <ul id="navigation">
+            <li><a href="#home"></a></li>
+            <li><a href="#page606"></a></li>
+          </ul>
+          <img
+            src="assets/images/602/TheSpireHorzLogo.svg"
+            alt="The Spire Apartments Logo"
+          />
+          <img
+            src="assets/images/602/AaronPeroLogo.svg"
+            alt="Aaron Pero logo"
+          />
+        </header>
+        <main>
+          <div class="floorplan">
+            <img src="/assets/images/602/floorplan.svg" alt="floorplan" />
+            <div class="tag">
+              <h1>602</h1>
+              <p>$811,000</p>
+            </div>
+          </div>
+          <div class="details">
+            <div class="topview">
+              <img src="assets/images/602/secondPlan.svg" alt="plan topview" />
+            </div>
+            <div class="floorplan_details">
+              <img src="assets/images/602/details.png" alt="plan details" />
+              <img
+                src="assets/images/602/specs.svg"
+                alt="plan specifications"
+              />
+            </div>
+          </div>
+        </main>
+      </div>
+    </div>
+    <div id="page606" class="container">
+      <div class="layout">
         <div class="floorplan">
-          <img src="/assets/images/602/floorplan.svg" alt="floorplan" />
-          <div class="tag">
-            <h1>602</h1>
-            <p>$811,000</p>
+          <img src="assets/images/floorplan606.svg" alt="Floor Plan" />
+        </div>
+        <div class="floorplan_details">
+          <span class="levels">
+            <img src="/assets/images/addons606.svg" alt="addons" />
+          </span>
+          <span class="details">
+            <img src="assets/images/levels606.svg" alt="levels" />
+            <img src="assets/images/apartment606.svg" alt="apartment" />
+          </span>
+          <div class="footer">
+            <img src="/assets/images/street606.svg" alt="street" />
+            <button>+ MAP</button>
           </div>
         </div>
-        <div class="details">
-          <div class="topview">
-            <img src="assets/images/602/secondPlan.svg" alt="plan topview" />
-          </div>
-          <div class="floorplan_details">
-            <img src="assets/images/602/details.png" alt="plan details" />
-            <img src="assets/images/602/specs.svg" alt="plan specifications" />
-          </div>
-        </div>
-      </main>
+      </div>
     </div>
   </body>
 </html>
