--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <div class="modal-content">
               <span id="close">&times;</span>
               <p>
-                Hello, Press A to move to FIRST PAGE & S to move to the SECOND
-                PAGE
+                Hello, Press <b>A</b> to move to FIRST PAGE and <b>S</b> to move
+                to the SECOND PAGE
               </p>
             </div>
           </div>
